# n8n-ai-candidate-screening

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py
app/core/: __init__.py  constants.py  database.py  exceptions.py  logging_config.py
app/integrations/: __init__.py  ats_client.py  email_client.py  sheets_client.py
app/models/: __init__.py  base.py  candidate.py  job.py
app/repositories/: __init__.py  candidate_repo.py  job_repo.py  screening_read_repo.py  screening_repo.py
app/services/: __init__.py  matching_service.py  parsing_service.py  scoring_service.py  screening_service.py
docs/: architecture.md  implementation-plan.md  n8n-workflow.md  problem-definition.md  runbook.md
docs/decisions/: 001-n8n-vs-pure-python.md  002-candidate-scoring-approach.md  003-ats-integration-design.md
eval/: test_set.jsonl
eval/results/: eval_2026-03-30.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: evaluate.py
tests/: __init__.py  conftest.py  test_health.py
tests/integration/: __init__.py  conftest.py  test_database.py  test_screening_endpoint.py  test_screening_pipeline.py
tests/unit/: __init__.py  test_error_recovery_and_security.py  test_llm_client.py  test_matching_service.py  test_n8n_workflow.py  test_parsing_service.py  (+3 more)
workflows/: candidate_screening.json
(+20 files in other folders)
